--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
