--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "digital-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gitname.github.io/react-gh-pages",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -18,5 +21,8 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
