--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d .next"
+    "deploy": "gh-pages -b master -d .next/server/pages"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
