--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d .next/server/pages"
+    "predeploy": "next export",
+    "deploy": "gh-pages -b master -d out"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
