added .nojekyll command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "predeploy": "next export",
+    "predeploy": "next export && touch out .nojekyll",
     "deploy": "gh-pages -b master -d out"
   },
   "dependencies": {
