--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy": "next build && next export && cd out && touch .nojekyll && cd .. && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin master"
+    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin master"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
