--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
+    "clean": "rm -rf out",
     "start": "next start",
-    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin master"
+    "deploy": "yarn build && touch out/.nojekyll && gh-pages -d ./out -b master -t"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
