--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@material-ui/styles": "^4.10.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "emailjs-com": "^2.6.4",
+    "formik": "^2.2.6",
     "next": "9.5.0",
+    "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
