--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - run: ls -LR
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
