--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,12 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-            
-      - run: cd ../.. && ls -LR
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
-      - run: yarn deploy
+        run: |
+            git config --global user.email ${{secrets.GITHUB_EMAIL}}
+            git config --global user.name ${{secrets.GITHUB_USERNAME}}
+            git remote set-url origin https://${{secrets.GITHUB_PERSONAL_TOKEN}}@github.com/${{secrets.GITHUB_USERNAME}}/prateekvijayvergiya.github.io.git
+            npm run deploy
