--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Deploy
         run: |
-            git config --global user.email ${{secrets.GITHUB_EMAIL}}
+            git config --global user.email ${{secrets.EMAIL}}
             git config --global user.name ${{secrets.GITHUB_USERNAME}}
-            git remote set-url origin https://${{secrets.GITHUB_PERSONAL_TOKEN}}@github.com/${{secrets.GITHUB_USERNAME}}/prateekvijayvergiya.github.io.git
-            npm run deploy
+            git remote set-url origin https://${{secrets.ACCESS_TOKEN}}@github.com/${{secrets.USERNAME}}/prateekvijayvergiya.github.io.git
+            yarn deploy
