--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Deploy
         run: |
             git config --global user.email ${{secrets.EMAIL}}
-            git config --global user.name ${{secrets.GITHUB_USERNAME}}
+            git config --global user.name ${{secrets.USERNAME}}
             git remote set-url origin https://${{secrets.ACCESS_TOKEN}}@github.com/${{secrets.USERNAME}}/prateekvijayvergiya.github.io.git
             yarn deploy
