--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
+    "babel-plugin-transform-define": "^2.0.0",
     "gh-pages": "^3.1.0"
   }
 }
