updated the deployment step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,3 +36,5 @@ jobs:
             git config --global user.name ${{secrets.USERNAME}}
             git remote set-url origin https://${{secrets.ACCESS_TOKEN}}@github.com/${{secrets.USERNAME}}/prateekvijayvergiya.github.io.git
             yarn deploy
+        env: 
+          NEXT_PUBLIC_SERVICE_ID: ${{secrets.NEXT_PUBLIC_SERVICE_ID}}
