--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
       - run: yarn build
         env: 
           NEXT_PUBLIC_SERVICE_ID: ${{secrets.NEXT_PUBLIC_SERVICE_ID}}
+          NEXT_PUBLIC_TEMPLATE_ID: ${{secrets.NEXT_PUBLIC_TEMPLATE_ID}}
+          NEXT_PUBLIC_USER_ID: ${{secrets.NEXT_PUBLIC_USER_ID}}  
 
       - name: Deploy
         run: |
@@ -38,3 +40,7 @@ jobs:
             git config --global user.name ${{secrets.USERNAME}}
             git remote set-url origin https://${{secrets.ACCESS_TOKEN}}@github.com/${{secrets.USERNAME}}/prateekvijayvergiya.github.io.git
             yarn deploy
+        env: 
+          NEXT_PUBLIC_SERVICE_ID: ${{secrets.NEXT_PUBLIC_SERVICE_ID}}
+          NEXT_PUBLIC_TEMPLATE_ID: ${{secrets.NEXT_PUBLIC_TEMPLATE_ID}}
+          NEXT_PUBLIC_USER_ID: ${{secrets.NEXT_PUBLIC_USER_ID}}
