--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - run: yarn install --frozen-lockfile
+      - run: |
+          touch .env.production.local
+          echo NEXT_PUBLIC_SERVICE_ID=${{secrets.NEXT_PUBLIC_SERVICE_ID}} >> .env.production.local
+          echo NEXT_PUBLIC_TEMPLATE_ID=${{secrets.NEXT_PUBLIC_TEMPLATE_ID}} >> .env.production.local
+          echo NEXT_PUBLIC_USER_ID=${{secrets.NEXT_PUBLIC_USER_ID}} >> .env.production.local
+      - run: echo ${{secrets.NEXT_PUBLIC_SERVICE_ID}} && cat .env.production.local
       - run: yarn build 
 
       - name: Deploy
