--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.0",
     "yup": "^0.32.8"
