--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emailjs-com": "^2.6.4",
     "formik": "^2.2.6",
     "next": "10.0.6",
+    "posthog-js": "^1.10.0",
     "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
